--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -33,6 +33,11 @@
     bind-key -n C-Tab next-window
     bind-key -n C-S-Tab previous-window
 
+    bind H resize-pane -L 10
+    bind J resize-pane -D 10
+    bind K resize-pane -U 10
+    bind L resize-pane -R 10
+
 # The pane border style
     set -g pane-border-bg colour235
     set -g pane-border-fg colour236
