--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,8 +24,8 @@
     unbind '"'
     unbind %
     unbind b
-    #set -g prefix  
-    #bind ¨ send-prefix
+    set -g prefix ¨
+    bind ¨ send-prefix
     bind h select-pane -L
     bind j select-pane -D
     bind k select-pane -U
