Add tmux bindings

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -24,8 +24,8 @@
     unbind '"'
     unbind %
     unbind b
-    set -g prefix ¨
-    bind ¨ send-prefix
+    set -g prefix C-q
+    bind C-q send-prefix
     bind h select-pane -L
     bind j select-pane -D
     bind k select-pane -U
@@ -37,6 +37,9 @@
     bind J resize-pane -D 10
     bind K resize-pane -U 10
     bind L resize-pane -R 10
+
+    bind M-j swap-pane -D
+    bind M-k swap-pane -U
 
 # The pane border style
     set -g pane-border-bg colour235
