--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,48 +1,68 @@
 # Colors
-    set -g default-terminal "screen-256color"
+set -g default-terminal "screen-256color"
 
 # Don't rename windows
-    set-option -g allow-rename off
+set-option -g allow-rename off
 
 # Enable mouse mode
-    set -g mouse on
-    set -g status off
-    set-option -gw xterm-keys on
+set -g mouse on
+
+# Sessions and windows
+set -g base-index 1           # start windows numbering at 1
+setw -g pane-base-index 1     # make pane numbering consistent with windows
+setw -g automatic-rename on   # rename window to reflect current program
+set -g renumber-windows on    # renumber windows when a window is closed
 
 # Make tmux not wait for a keybinding, insert -> normal
-    set -sg escape-time 0 
+set -sg escape-time 0 
 
 # Easy Config Reloads
-    bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display '.tmux.conf sourced'
 
-# Split panes using | and -
-    bind | split-window -h -c '#{pane_current_path}'
-    bind - split-window -v -c '#{pane_current_path}'
+# Bindings
+unbind C-b
+unbind '"'
+unbind %
+unbind b
+set -g prefix C-q
+bind C-q send-prefix
 
-# Prefix
-    unbind C-b
-    unbind '"'
-    unbind %
-    unbind b
-    set -g prefix C-q
-    bind C-q send-prefix
-    bind h select-pane -L
-    bind j select-pane -D
-    bind k select-pane -U
-    bind l select-pane -R
-    bind-key -n C-Tab next-window
-    bind-key -n C-S-Tab previous-window
+bind | split-window -h -c '#{pane_current_path}'
+bind - split-window -v -c '#{pane_current_path}'
 
-    bind H resize-pane -L 10
-    bind J resize-pane -D 10
-    bind K resize-pane -U 10
-    bind L resize-pane -R 10
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
+bind H resize-pane -L 10
+bind J resize-pane -D 10
+bind K resize-pane -U 10
+bind L resize-pane -R 10
 
-    bind M-j swap-pane -D
-    bind M-k swap-pane -U
+bind M-j swap-pane -D
+bind M-k swap-pane -U
+
+bind C-x kill-session -a \; display 'All other sessions killed'
+
+# Status bar
+# set -g status off
+set -g status-bg colour235
+set -g status-fg colour15
+
+set -g status-left " #S "
+
+set -g status-right "#($DOTFILES/tmux/scripts/mem.sh) #($DOTFILES/tmux/scripts/docker.sh)"
+set -g status-interval 5
+
+set -g window-status-current-format "#[fg=colour7]#[bg=colour4]  #I-#W  "
+set -g window-status-format "#[fg=colour245]#[bg=colour238] #I-#W "
+set -g window-status-separator ""
+
 
 # The pane border style
-    set -g pane-border-bg colour235
-    set -g pane-border-fg colour236
-    set -g pane-active-border-bg colour235
-    set -g pane-active-border-fg colour236
+set -g pane-border-bg colour235
+set -g pane-border-fg colour235
+set -g pane-active-border-bg colour235
+set -g pane-active-border-fg colour235
+
+# https://hackernoon.com/customizing-tmux-b3d2a5050207
