--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,11 +51,11 @@ set -g status-fg colour15
 
 set -g status-left " #S "
 
-set -g status-right "#($DOTFILES/tmux/scripts/mem.sh) #($DOTFILES/tmux/scripts/docker.sh)"
+set -g status-right "#($DOTFILES/tmux/scripts/docker.sh) | #($DOTFILES/tmux/scripts/cpu.sh) | #($DOTFILES/tmux/scripts/mem.sh) "
 set -g status-interval 5
 
-set -g window-status-current-format "#[fg=colour7]#[bg=colour4]  #I-#W  "
-set -g window-status-format "#[fg=colour245]#[bg=colour238] #I-#W "
+set -g window-status-current-format "#[fg=colour15]#[bg=colour67] [#I]  #W  "
+set -g window-status-format "#[fg=colour245]#[bg=colour238] #I #W "
 set -g window-status-separator ""
 
 
