--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,7 +51,7 @@ set -g status-fg colour15
 
 set -g status-left " #S "
 
-set -g status-right "#($DOTFILES/tmux/scripts/docker.sh) | #($DOTFILES/tmux/scripts/cpu.sh) | #($DOTFILES/tmux/scripts/mem.sh) "
+set -g status-right "#($DOTFILES/tmux/scripts/kubernetes.sh) |#($DOTFILES/tmux/scripts/docker.sh) | #($DOTFILES/tmux/scripts/cpu.sh) | #($DOTFILES/tmux/scripts/mem.sh) "
 set -g status-interval 5
 
 set -g window-status-current-format "#[fg=colour15]#[bg=colour67] [#I]  #W  "
@@ -65,4 +65,3 @@ set -g pane-border-fg colour235
 set -g pane-active-border-bg colour235
 set -g pane-active-border-fg colour235
 
-# https://hackernoon.com/customizing-tmux-b3d2a5050207
