Start adding file icons

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -14,7 +14,7 @@ setw -g automatic-rename on   # rename window to reflect current program
 set -g renumber-windows on    # renumber windows when a window is closed
 
 # Make tmux not wait for a keybinding, insert -> normal
-set -sg escape-time 0 
+set -sg escape-time 0
 
 # Easy Config Reloads
 bind r source-file ~/.tmux.conf \; display '.tmux.conf sourced'
@@ -51,7 +51,7 @@ set -g status-fg colour15
 
 set -g status-left " #S "
 set -g status-right-length 150
-set -g status-right "#{?window_zoomed_flag,🔍 |,} #($DOTFILES/tmux/scripts/kubernetes.sh) | #($DOTFILES/tmux/scripts/docker.sh) | #($DOTFILES/tmux/scripts/cpu.sh) | #($DOTFILES/tmux/scripts/mem.sh) "
+set -g status-right "#{?window_zoomed_flag,🔍 |,} #($DOTFILES/tmux/scripts/kubernetes.sh) #($DOTFILES/tmux/scripts/docker.sh) #($DOTFILES/tmux/scripts/cpu.sh) | #($DOTFILES/tmux/scripts/mem.sh) "
 set -g status-interval 8
 
 set -g window-status-current-format "#[fg=colour15]#[bg=colour67] [#I]  #W  "
@@ -64,4 +64,3 @@ set -g pane-border-bg colour235
 set -g pane-border-fg colour235
 set -g pane-active-border-bg colour235
 set -g pane-active-border-fg colour235
-
