Show text in status bar if pass is not pushed

--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,7 +51,7 @@ set -g status-fg colour15
 
 set -g status-left " #S "
 set -g status-right-length 150
-set -g status-right "#{?window_zoomed_flag,🔍 |,} #($DOTFILES/tmux/scripts/kubernetes.sh) #($DOTFILES/tmux/scripts/docker.sh) #($DOTFILES/tmux/scripts/cpu.sh) | #($DOTFILES/tmux/scripts/mem.sh) "
+set -g status-right "#{?window_zoomed_flag,🔍 |,} #($DOTFILES/tmux/scripts/pass.sh) #($DOTFILES/tmux/scripts/kubernetes.sh) #($DOTFILES/tmux/scripts/docker.sh) #($DOTFILES/tmux/scripts/cpu.sh) | #($DOTFILES/tmux/scripts/mem.sh) "
 set -g status-interval 8
 
 set -g window-status-current-format "#[fg=colour15]#[bg=colour67] [#I]  #W  "
