--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -51,7 +51,7 @@ set -g status-fg colour15
 
 set -g status-left " #S "
 set -g status-right-length 150
-set -g status-right "#{?window_zoomed_flag,🔍 |,} #($DOTFILES/tmux/scripts/pass.sh) #($DOTFILES/tmux/scripts/kubernetes.sh) #($DOTFILES/tmux/scripts/docker.sh) #($DOTFILES/tmux/scripts/cpu.sh) | #($DOTFILES/tmux/scripts/mem.sh) "
+set -g status-right "#{?window_zoomed_flag,🔍 |,} #($DOTFILES/tmux/scripts/statusbar.sh) "
 set -g status-interval 8
 
 set -g window-status-current-format "#[fg=colour15]#[bg=colour67] [#I]  #W  "
@@ -60,7 +60,5 @@ set -g window-status-separator ""
 
 
 # The pane border style
-set -g pane-border-bg colour235
-set -g pane-border-fg colour235
-set -g pane-active-border-bg colour235
-set -g pane-active-border-fg colour235
+set -g pane-border-style bg=colour235,fg=colour235
+set -g pane-active-border-style bg=colour235,fg=colour235
