--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -46,12 +46,14 @@ bind C-x kill-session -a \; display 'All other sessions killed'
 
 # Status bar
 # set -g status off
+set-option -g status-position top
+
 set -g status-bg colour235
 set -g status-fg colour15
 
 set -g status-left " #S "
 set -g status-right-length 150
-set -g status-right "#{?window_zoomed_flag,🔍 |,} #($DOTFILES/tmux/scripts/statusbar.sh) "
+set -g status-right "#{?window_zoomed_flag,🔍 ,} #($DOTFILES/tmux/scripts/statusbar.sh) "
 set -g status-interval 8
 
 set -g window-status-current-format "#[fg=colour15]#[bg=colour67] [#I]  #W  "
