--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -56,8 +56,8 @@ set -g status-right-length 150
 set -g status-right "#{?window_zoomed_flag,🔍 ,} #($DOTFILES/tmux/scripts/statusbar.sh) "
 set -g status-interval 8
 
-set -g window-status-current-format "#[fg=colour15]#[bg=colour67] #I  #W  "
-set -g window-status-format "#[fg=colour245]#[bg=colour238] #I #W "
+set -g window-status-current-format "#[bold]  #I  #W  "
+set -g window-status-format "#[fg=colour245] #I #W "
 set -g window-status-separator ""
 
 
