--- a/sway/config
+++ b/sway/config
@@ -210,7 +210,7 @@ bar {
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
-    status_command while date +'%d-%m-%Y %k:%M %p'; do sleep 1; done
+    status_command while /home/jonasbak/dotfiles/sway/bar.sh; do sleep 1; done
 
     colors {
         statusline $foreground
