--- a/alacritty/.config/alacritty/alacritty.yml
+++ b/alacritty/.config/alacritty/alacritty.yml
@@ -175,54 +175,29 @@ colors:
   # Default colors
   primary:
     background: '0x262626'
-    foreground: '0xBCBCBC'
-
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #dim_foreground: '0x9a9a9a'
-    #bright_foreground: '0xffffff'
-
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor. If these are unset,
-  # the cursor color will be the inverse of the cell color.
-  #cursor:
-  #  text: '0x000000'
-  #  cursor: '0xffffff'
-
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area. If selection
-  # background is unset, selection color will be the inverse of the cell colors.
-  # If only text is unset the cell text color will remain the same.
-  #selection:
-  #  text: '0xeaeaea'
-  #  background: '0x404040'
+    foreground: '0xcfcfcf'
 
   # Normal colors
   normal:
-    black:   '0x1C1C1C'
-    red:     '0xAF5F5F'
-    green:   '0x5F875F'
-    yellow:  '0x87875F'
-    blue:    '0x5F87AF'
-    magenta: '0x5F5F87'
-    cyan:    '0x5F8787'
-    white:   '0x6C6C6C'
+    black:   '0x1c1c1c'
+    red:     '0xcb3c3c'
+    green:   '0x4d9e4d'
+    yellow:  '0xf4d443'
+    blue:    '0x517eac'
+    magenta: '0x61619e'
+    cyan:    '0x3e8d8d'
+    white:   '0x7b7b7b'
 
   # Bright colors
   bright:
-    black:   '0x444444'
-    red:     '0xFF8700'
-    green:   '0x87AF87'
-    yellow:  '0xFFFFAF'
-    blue:    '0x8FAFD7'
-    magenta: '0x8787AF'
-    cyan:    '0x5FAFAF'
-    white:   '0xFFFFFF'
+    black:   '0x606060'
+    red:     '0xc83d3d'
+    green:   '0x74b574'
+    yellow:  '0xf8e33c'
+    blue:    '0x608bc3'
+    magenta: '0x8080c1'
+    cyan:    '0x48b0b0'
+    white:   '0xffffff'
 
   # Dim colors
   #
