--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -255,4 +255,8 @@ for_window [app_id="firefox"] inhibit_idle fullscreen
 bindsym $mod+p exec $term --class pass -e sh -c $HOME/dotfiles/bin/pw
 for_window [app_id="pass"] focus, floating enabled, resize set 450 px 125 px
 
+# Run screenshot script
+bindsym --release Print exec $term --class screenshot --title screenshot -e sh -c $HOME/dotfiles/bin/screenshot
+for_window [app_id="screenshot"] focus, floating enabled, resize set 550 px 125 px
+
 include ~/.config/sway/config.d/*
