--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -56,6 +56,7 @@ exec swayidle -w \
          before-sleep '$lockscreen'
 
 for_window [app_id="firefox-wayland"] inhibit_idle fullscreen
+for_window [app_id="firefox-wayland"] inhibit_idle focus
 
 #
 # Input
