--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -53,7 +53,7 @@ set -g status-fg colour252
 
 set -g status-left " #S "
 set -g status-right-length 150
-set -g status-right "#{?window_zoomed_flag,🔍 ,} #($DOTFILES/utils/tmux/statusbar.sh) "
+set -g status-right "#{?window_zoomed_flag,🔍 ,} #(~/.config/tmux/statusbar.sh) "
 set -g status-interval 8
 
 set -g window-status-current-format "#[bold]  #I  #W  "
