--- a/sway/.config/waybar/config
+++ b/sway/.config/waybar/config
@@ -4,7 +4,7 @@
   "height": 30,
   "modules-left": [
     "sway/workspaces",
-  "sway/mode"
+    "sway/mode"
   ],
   "modules-center": [
     "sway/window"
@@ -25,7 +25,7 @@
       "warning": 30,
       "critical": 15
     },
-    "format": " {icon} {capacity}%",
+    "format": "{icon} {capacity}% ",
     "format-discharging": "{icon} {capacity}%",
     "format-icons": [
       "",
