Change tmux tab labels, add wofi style config

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,7 +45,6 @@ bind M-k swap-pane -U
 bind C-x kill-session -a \; display 'All other sessions killed'
 
 # Status bar
-# set -g status off
 set-option -g status-position top
 
 set -g status-bg colour235
@@ -56,9 +55,9 @@ set -g status-right-length 150
 set -g status-right "#{?window_zoomed_flag,🔍 ,} #(~/.config/tmux/statusbar.sh) "
 set -g status-interval 8
 
-set -g window-status-current-format "#[bold]  #I  #W  "
-set -g window-status-format "#[fg=colour245] #I #W "
-set -g window-status-separator ""
+set -g window-status-current-format "#[bold] #I #{?#{==:#{pane_current_command},ssh},ssh,#{b:pane_current_path}} "
+set -g window-status-format "#[fg=colour245]#I #W#{?#{==:#{pane_current_command},ssh},,(#{b:pane_current_path})}"
+set -g window-status-separator " "
 
 
 # The pane border style
