--- a/vim/.vim/coc-settings.json
+++ b/vim/.vim/coc-settings.json
@@ -1,5 +1,9 @@
 {
+  "coc.preferences.formatOnSaveFiletypes": [
+    "*"
+  ],
+  "diagnostic.checkCurrentLine": true,
+  "diagnostic.messageTarget": "echo",
   "python.jediEnabled": false,
-  "suggest.autoTrigger": "trigger",
-  "diagnostic.enable": false
+  "suggest.autoTrigger": "trigger"
 }
