--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -96,6 +96,11 @@ bindsym $mod+Shift+$down move down
 bindsym $mod+Shift+$up move up
 bindsym $mod+Shift+$right move right
 
+bindsym $mod+Shift+Left move left
+bindsym $mod+Shift+Down move down
+bindsym $mod+Shift+Up move up
+bindsym $mod+Shift+Right move right
+
 # Media control
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
@@ -148,14 +153,6 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 
 #
-# Resize
-#
-bindsym $mod+Shift+Left resize shrink width 100px
-bindsym $mod+Shift+Down resize grow height 100px
-bindsym $mod+Shift+Up resize shrink height 100px
-bindsym $mod+Shift+Right resize grow width 100px
-
-#
 # Scratchpad:
 #
 bindsym $mod+Shift+plus move scratchpad
@@ -173,6 +170,15 @@ mode "resize" {
     bindsym Down resize grow height 10px
     bindsym Up resize shrink height 10px
     bindsym Right resize grow width 10px
+
+    bindsym Shift+$left resize shrink width 100px
+    bindsym Shift+$down resize grow height 100px
+    bindsym Shift+$up resize shrink height 100px
+    bindsym Shift+$right resize grow width 100px
+    bindsym Shift+Left resize shrink width 100px
+    bindsym Shift+Down resize grow height 100px
+    bindsym Shift+Up resize shrink height 100px
+    bindsym Shift+Right resize grow width 100px
 
     bindsym Return mode "default"
     bindsym Escape mode "default"
