--- a/sway/.config/sway/config
+++ b/sway/.config/sway/config
@@ -39,12 +39,12 @@ set $term alacritty
 
 set $wallpapers ~/.config/sway/wallpapers
 
-set $lockscreen swaylock -f -i `find -L $wallpapers -type f | shuf -n 1 | xargs realpath` --font "InconsolataLGC Nerd Font Mono"
+set $lockscreen swaylock -f -i `find -L $wallpapers -type f | shuf -n 1 | xargs realpath` --font "InconsolataLGC Nerd Font Mono" --scaling center
 
 #
 # Output
 #
-output * bg `find -L $wallpapers -type f | shuf -n 1 | xargs realpath` fill
+output * bg `find -L $wallpapers -type f | shuf -n 1 | xargs realpath` center
 
 #
 # Idle
