--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -42,7 +42,11 @@ bind L resize-pane -R 10
 bind M-j swap-pane -D
 bind M-k swap-pane -U
 
-bind C-x kill-session -a \; display 'All other sessions killed'
+# Copy stuff
+set -g mode-keys vi
+bind-key -T copy-mode-vi v send-keys -X begin-selection
+bind-key -T copy-mode-vi y send-keys -X copy-pipe-and-cancel 'wl-copy'
+bind C-c copy-mode
 
 # Status bar
 set-option -g status-position top
