Add kitty.conf, make stuff work on mac

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,7 @@ unbind b
 set -g prefix C-q
 bind C-q send-prefix
 
-bind | split-window -h -c '#{pane_current_path}'
+bind "'" split-window -h -c '#{pane_current_path}'
 bind - split-window -v -c '#{pane_current_path}'
 
 bind h select-pane -L
